# mantle-sentinel

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  LICENSE  Makefile  README.md  foundry.toml  pyproject.toml  requirements.txt  todo.md
bench/: REPORT.md  capture_etherscan.py  dream_bench.py  freqbase.py  generate_reports.py  injector.py  scorer.py  self_attack.py  snapshot.py  spike.py  synth.py
contracts/: SentinelAlertRegistry.sol  VictimCounter.sol  abi.json  alert.schema.json  deployments.json
dashboard/: index.html
docs/: ALGO_REVIEW.md  ARCHITECTURE_FREEZE.md  BENCHMARK_PROTOCOL.md  BUIDL_SUBMISSION.md  DECISIONS.md  DEMO_SCRIPT.md  FINAL_FREEZE.md  KNOWN_LIMITATIONS.md  MVP_IMPLEMENTATION_FREEZE.md  MVP_MATH_SPEC.md  PROJECT_CONTEXT.md  REVIEW_PROTOCOL.md  ROADMAP.md  ROADMAP_POST_MVP.md  TASKS.md  TZ_ALGO_FIXES.md  TZ_ALGO_REVIEW.md  TZ_BLOG.md  TZ_CLEANUP.md  TZ_DEVELOPER_FINAL.md  TZ_FINAL_BUNDLE.md  TZ_FINAL_POLISH.md  TZ_FIXES.md  TZ_FIX_BLOG_IMAGES.md  TZ_INTERACTIVE.md  TZ_LANDING_V4.md  TZ_PATCH_HEALTH.md  TZ_PITCH.md  TZ_PITCH_V2.md  TZ_SCAN_BUNDLE.md  TZ_SDK.md  TZ_VIDEO.md  zai_prompt.md
examples/: multi_scan.py  quick_scan.py
scripts/: scan_to_supabase.py
sentinel/: __init__.py  __main__.py  alert.py  bocpd.py  client.py  config.py  detector.py  dream.py  drift.py  entropy.py  episodes.py  explain_zai.py  features.py  hdc.py  interpreter.py  notify_telegram.py  pipeline.py  prefilter.py  replay.py  scan.py  watch.py
test/: SentinelAlertRegistry.t.sol
tests/: test_bocpd.py  test_cli.py  test_client.py  test_config.py  test_detector.py  test_dream.py  test_drift.py  (+13 more)
(+44 files in other folders)
