[project]
name = "mantle-sentinel"
version = "0.1.0"
description = "Training-free behavioral anomaly detection for Mantle smart contracts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "jsonschema>=4.0",
]
live = [
    "web3>=7.0",
    "eth-account>=0.13",
]

[project.scripts]
sentinel = "sentinel.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sentinel", "bench"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
